--- a/css/style.css
+++ b/css/style.css
@@ -263,6 +263,12 @@ a.anchor {
     text-align: center;
 }
 
+.contact h3 {
+	font-size: 1.6rem;
+	margin-top: 1.5rem;
+	line-height: 1.25;
+}
+
 /* 
 
 
