--- a/css/style.css
+++ b/css/style.css
@@ -269,6 +269,18 @@ a.anchor {
 	line-height: 1.25;
 }
 
+.contact a {
+	text-decoration: none;
+}
+
+.contact .icons > li {
+    width: 2.5rem;
+    height: 2.5rem;
+    display: inline-block;
+    margin: 1.25rem 5px;
+    padding: 0.625rem 0;
+}
+
 /* 
 
 
@@ -277,16 +289,7 @@ a.anchor {
     border-top: 1px solid #eaebec;
     margin: 1.313rem 0;
 }
-.social .icons > li {
-    border-radius: 1.25rem;
-    width: 2.5rem;
-    height: 2.5rem;
-    display: inline-block;
-    margin: 1.25rem 5px;
-    border: 1px solid #eaebec;
-    padding: 0.625rem 0;
-    text-align: center;
-}
+
 .social .icons > li:hover {
     cursor: pointer;
 }
